added k6 pressure testing